@@ -41,6 +41,7 @@ aTunes 1.13.5
 - FIX: Show play list information enabled for more than one audio object [2786446]
 - FIX: Sort by file name option sorts audio object in folder view in wrong order [2807803]
 - FIX: Song info dialog not resizable [2824009]
+- FIX: After renaming an audio file, repository keeps reference to old name
 
 aTunes 1.13.4
 -------------
